Fix album border on smaller screens.

--- a/css/index.scss
+++ b/css/index.scss
@@ -64,18 +64,25 @@ h2 {
     margin-top: 20px;
     margin-right: 20px;
     display: inline-block;
-    border: 1px solid #ccc;
 
     @include respond-to(handhelds) {
         width: 100%;
+        height: auto;
     }
 
     @include respond-to(medium-screens) {
         width: 100%;
+        height: auto;
     }
 
     &:nth-child(3n + 1) {
         margin-right: 0;
+    }
+
+    a {
+        display: block;
+        border: 1px solid #ccc;
+        line-height: 0;
     }
 
     img {
